--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     font-family:Verdana, sans-serif;
     background-color: rgb(180, 202, 228);
     color: rgb(255, 255, 255);
+    user-select: none;
 }
 
 header {
@@ -35,21 +36,70 @@ ul {
     margin:0;
     padding:0;
 }
-
-.sp-menu {
-    margin-left: auto;
-    margin-right: 30px;
-}
-
-.sp-menu #open {
-    font-size: 32px;
-    line-height: 64px;
+#menu-btn,
+#close{
+    position: fixed;
+    right: 20px;
+    z-index: 3;
+    /* display: flex; */
+    color:#000;
+    font-size:32px;
+    line-height:64px;
     cursor: pointer;
-    color: black;
+    transition: 0.4s ease;
 }
 
-.sp-menu #open.hide {
+#close {
+    color: #fff;
+}
+.active {
     display: none;
+    transition: 0.4s ;
+}
+
+.menu{
+    position: fixed;
+    top: 0;
+    right:0px;
+    z-index: 2;
+    width: 60%;
+    height: 100%;
+    padding: 64px 0;
+    text-align: center;
+    background: rgba(55, 144, 185, 0.9);
+}
+
+.menu-enter-active, 
+.menu-leave-active {
+    transition: opacity 0.4s;
+}
+
+  .menu-enter, .menu-leave-to {
+    opacity: 0;
+}
+
+.menu-leave, .menu-enter-to {
+    opacity: 1;
+}
+
+.menu li {
+    margin-top:24px;
+    transform: translateY(16px);
+    transition: opacity .3s, transform .3s;
+}
+
+.menu li > a {
+    display: block;
+    line-height: 50px;
+    text-decoration: none;
+    color: white;
+    transition: all .4s;
+}
+
+.menu li > a:hover {
+    color: rgb(255, 253, 107);
+    font-size: 20px;
+    transition: all .4s;
 }
 
 main {
@@ -142,71 +192,6 @@ main {
 
 #slideBtn .current {
     background-color: rgb(110, 154, 204);
-}
-
-.overlay {
-    position: fixed;
-    z-index: 2;
-    top:0;
-    bottom:0;
-    right:0;
-    left:40%;
-    background-color: rgba(55, 144, 185, 0.9);
-    text-align: center;
-    padding: 64px;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity .6s;
-}
-
-.overlay.show {
-    opacity: 1;
-    pointer-events: auto;
-}
-
-.overlay #close {
-    position: absolute;
-    top:16px;
-    right:16px;
-    font-size: 32px;
-    cursor: pointer;
-    color: white;
-}
-
-.overlay li {
-    margin-top:24px;
-    opacity: 0;
-    transform: translateY(16px);
-    transition: opacity .3s, transform .3s;
-}
-
-.overlay li > a {
-    display: block;
-    line-height: 50px;
-    text-decoration: none;
-    color: white;
-    transition: all .4s;
-}
-
-.overlay li > a:hover {
-    color: rgb(255, 253, 107);
-    font-size: 20px;
-    transition: all .4s;
-}
-
-.overlay.show li {
-    opacity: 1;
-    transform: none;
-}
-
-.overlay.show li:nth-child(1){
-    transition-delay: .1s;
-}
-.overlay.show li:nth-child(2){
-    transition-delay: .2s;
-}
-.overlay.show li:nth-child(3){
-    transition-delay: .3s;
 }
 
 .new-btn,
