--- a/styles.css
+++ b/styles.css
@@ -104,94 +104,22 @@ ul {
 
 main {
     padding: 0 16px;
-}
-
-.carousel{
-    width:80%;
-    margin: 100px auto;
-    margin-bottom:20px;
-}
-
-.carousel h3 {
+    margin-top: 100px;
     text-align: center;
 }
 
-.carousel h3 > #photo {
-    font-size:15px;
-}
-
-.container {
-    width:100%;
-    height:250px;
-    outline: 5px double white;
-    overflow: hidden;
+.VueCarousel-slide {
     position: relative;
-}
-
-.container ul {
-    height: 100%;
+    min-height: 200px;
+  }
+  
+.label {
+    height: 260px;
+    width: 380px;
     display: flex;
-    transition: transform .6s;
-}
-
-.container li {
-    height: 100%;
-    min-width: 100%;
-}
-
-.container li > img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-#prev,
-#next {
-    position: absolute;
-    top:50%;
-    transform: translatey(-50%);
-    border: none;
-    background: none;
-    color: white;
-    font-size: 30px;
-    cursor: pointer;
-}
-#prev:hover,
-#next:hover {
-    color: rgb(180, 202, 228);
-    transition: all 0.5s;
-}
-
-#prev {
-    left:0;
-}
-
-#next {
-    right:0;
-}
-
-.hidden {
-    display: none;
-}
-
-#slideBtn {
-    margin-top: 20px;
-    text-align: center;
-}
-#slideBtn button + button {
-    margin-left: 8px;
-}
-#slideBtn button {
-    border: none;
-    width: 12px;
-    height: 12px;
-    background-color: rgb(138, 183, 226);
-    border-radius: 50px;
-    cursor: pointer;
-}
-
-#slideBtn .current {
-    background-color: rgb(110, 154, 204);
+    margin:  0 auto; 
+    justify-content: center; 
+    align-items: center; 
 }
 
 .new-btn,
@@ -271,16 +199,10 @@ input,
 textarea {
     margin:0 auto;
     border: none;
-    /* width: 300px; */
     padding:8px;
     background-color: rgb(241, 238, 238);
 }
 
-/* textarea {
-    width: 400px;
-    resize: none;
-    height: 60px;
-} */
 #text-box {
     width: 400px;
     height: 30px;
